--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <html>
     <head>
         <title>test3</title>
+        <meta charset="utf-8">
+        <style>
+            h1 {
+                color: green;
+            }
+            title {
+                color: red;
+            }
+        </style>
     </head>
     <body>
         <h1>test</h1>
+        <hr />
+        <p>Тест абзаца аa
+        <p>Ntcn f,pfwf 2</p>
+        <marquee>проверка бегущей строки</marquee>
     </body>
 
 
