--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
         <title>test3</title>
         <meta charset="utf-8">
         <style>
+            body {
+                width: 800px;
+                margin-left: auto;
+                margin-right: auto;
+            }
             h1 {
                 color: green;
             }
